候補者登録フォームのSubmit時にAPIにリクエストを投げるよう変更
