# openapi/sample.yaml
@@ -28,13 +28,21 @@ paths:
               examples:
                 Get User Alice Smith:
                   value:
-                    id: 142
-                    firstName: Alice
-                    lastName: Smith
-                    email: alice.smith@gmail.com
-                    dateOfBirth: '1997-10-31'
+                    id: 1
+                    firstName: 拓巳
+                    lastName: 高橋
+                    email: takahashi.takumi@gmail.com
+                    dateOfBirth: '1989-01-11'
                     emailVerified: true
-                    signUpDate: '2019-08-24'
+                    createDate: '2023-12-01'
+                    referralCount: 23
+                    preferredWorkLocation: 大阪府
+                    applicationCount: 11
+                    progress: 4
+                    priority: 1
+                    personInCharge: 赤井 大輔
+                    updatedAt: '2024-01-12'
+                    registRoute: ビズリーチ
         '404':
           description: User Not Found
       operationId: get-users-userId
@@ -52,13 +60,21 @@ paths:
               examples:
                 Updated User Rebecca Baker:
                   value:
-                    id: 13
-                    firstName: Rebecca
-                    lastName: Baker
-                    email: rebecca@gmail.com
-                    dateOfBirth: '1985-10-02'
-                    emailVerified: false
-                    createDate: '2019-08-24'
+                    id: 1
+                    firstName: 拓巳
+                    lastName: 高橋
+                    email: takahashi.takumi@gmail.com
+                    dateOfBirth: '1989-01-11'
+                    emailVerified: true
+                    createDate: '2023-12-01'
+                    referralCount: 23
+                    preferredWorkLocation: 大阪府
+                    applicationCount: 11
+                    progress: 4
+                    priority: 1
+                    personInCharge: 赤井 大輔
+                    updatedAt: '2024-01-12'
+                    registRoute: ビズリーチ
         '404':
           description: User Not Found
         '409':
@@ -105,13 +121,21 @@ paths:
               examples:
                 New User Bob Fellow:
                   value:
-                    id: 12
-                    firstName: Bob
-                    lastName: Fellow
-                    email: bob.fellow@gmail.com
-                    dateOfBirth: '1996-08-24'
-                    emailVerified: false
-                    createDate: '2020-11-18'
+                    id: 1
+                    firstName: 拓巳
+                    lastName: 高橋
+                    email: takahashi.takumi@gmail.com
+                    dateOfBirth: '1989-01-11'
+                    emailVerified: true
+                    createDate: '2023-12-01'
+                    referralCount: 23
+                    preferredWorkLocation: 大阪府
+                    applicationCount: 11
+                    progress: 4
+                    priority: 1
+                    personInCharge: 赤井 大輔
+                    updatedAt: '2024-01-12'
+                    registRoute: ビズリーチ
         '400':
           description: Missing Required Information
         '409':
@@ -121,6 +145,22 @@ paths:
           application/json:
             schema:
               type: object
+              x-examples:
+                Example 1:
+                  id: 1
+                  firstName: 拓巳
+                  lastName: 高橋
+                  email: takahashi.takumi@gmail.com
+                  dateOfBirth: '1989-01-11'
+                  emailVerified: true
+                  createDate: '2023-12-01'
+                  referralCount: 23
+                  preferredWorkLocation: 大阪府
+                  applicationCount: 11
+                  progress: 4
+                  priority: 1
+                  personInCharge: 赤井 大輔
+                  updatedAt: '2024-01-12'
               properties:
                 firstName:
                   type: string
@@ -130,19 +170,50 @@ paths:
                   type: string
                 dateOfBirth:
                   type: string
-                  format: date
+                emailVerified:
+                  type: boolean
+                createDate:
+                  type: string
+                referralCount:
+                  type: integer
+                preferredWorkLocation:
+                  type: string
+                applicationCount:
+                  type: integer
+                progress:
+                  type: integer
+                priority:
+                  type: integer
+                personInCharge:
+                  type: string
+                updatedAt:
+                  type: string
+                registRoute:
+                  type: string
+                  x-stoplight:
+                    id: rg6akfw8normj
               required:
                 - firstName
                 - lastName
-                - email
-                - dateOfBirth
+                - registRoute
             examples:
               Create User Bob Fellow:
                 value:
-                  firstName: Bob
-                  lastName: Fellow
-                  email: bob.fellow@gmail.com
-                  dateOfBirth: '1996-08-24'
+                  id: 1
+                  firstName: 拓巳
+                  lastName: 高橋
+                  email: takahashi.takumi@gmail.com
+                  dateOfBirth: '1989-01-11'
+                  emailVerified: true
+                  createDate: '2023-12-01'
+                  referralCount: 23
+                  preferredWorkLocation: 大阪府
+                  applicationCount: 11
+                  progress: 4
+                  priority: 1
+                  personInCharge: 赤井 大輔
+                  updatedAt: '2024-01-12'
+                  registRoute: ビズリーチ
         description: Post the necessary fields for the API to create a new user.
       description: Create a new user.
   /users:
@@ -177,6 +248,7 @@ paths:
                       priority: 1
                       personInCharge: 赤井 大輔
                       updatedAt: '2024-01-12'
+                      registRoute: ビズリーチ
                     - id: 2
                       firstName: 花道
                       lastName: 桜木
@@ -191,6 +263,7 @@ paths:
                       priority: 2
                       personInCharge: 砂川 大地
                       updatedAt: '2024-01-13'
+                      registRoute: リクルート
       operationId: get-users
     parameters: []
   /progresses:
@@ -215,13 +288,20 @@ components:
       title: User
       type: object
       examples:
-        - id: 142
-          firstName: Alice
-          lastName: Smith
-          email: alice.smith@gmail.com
-          dateOfBirth: '1997-10-31'
+        - id: 1
+          firstName: 拓巳
+          lastName: 高橋
+          email: takahashi.takumi@gmail.com
+          dateOfBirth: '1989-01-11'
           emailVerified: true
-          signUpDate: '2019-08-24'
+          createDate: '2023-12-01'
+          referralCount: 23
+          preferredWorkLocation: 大阪府
+          applicationCount: 11
+          progress: 4
+          priority: 1
+          personInCharge: 赤井 大輔
+          updatedAt: '2024-01-12'
       properties:
         id:
           type: integer
@@ -276,6 +356,10 @@ components:
           type: string
           x-stoplight:
             id: jnxe0an5jlzd8
+        registRoute:
+          type: string
+          x-stoplight:
+            id: mvqq2shc8wae6
       required:
         - id
         - firstName
@@ -286,6 +370,7 @@ components:
         - applicationCount
         - progress
         - priority
+        - registRoute
     Progress:
       title: Progress
       x-stoplight:
